ci: 配置解决方案

--- a/src/react-quill/quill.snow.less
+++ b/src/react-quill/quill.snow.less
@@ -4,6 +4,7 @@
  * Copyright (c) 2014, Jason Chen
  * Copyright (c) 2013, salesforce.com
  */
+@icon-normal-color: #666;
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
